--- a/app/css/pay.css
+++ b/app/css/pay.css
@@ -11,14 +11,14 @@
     bottom: 0;
 }
 .circle-head-big{
-    width: 280px;
-    height: 280px;
+    width: 350px;
+    height: 350px;
     border: 1px solid #ddd;
     border-radius: 50%;
 }
 .title-name{
     font-weight:bold;
-    font-size: 40px;
+    font-size: 60px;
     padding-top: 50px;
 }
 .row-height{
@@ -26,17 +26,73 @@
 }
 
 .pay-address{
-    font-size: 30px;
-    margin-top: 10px;
-    color: #9d9d9d;
+    font-size: 45px;
+    margin-top: 20px;
+    color: #b3b3b3;
     font-family: -apple-system,SF UI Text,Arial,PingFang SC,Hiragino Sans GB,Microsoft YaHei,WenQuanYi Micro Hei,sans-serif;
 }
 
 .star-record{
-    margin-top: 30px;
-    font-size: 50px;
+    margin-top: 50px;
+    font-size: 70px;
+    color: #f5ca23;
 }
-
 .star-record span{
     padding-left: 10px;
+
+}
+.hr-line{
+    height: 5px;
+    margin-top: 20px;
+    background: #e8e8e8;
+}
+#acc-input-box{
+    width: 800px;
+    height: 150px;
+    font-size: 14px;
+    border: 6px solid #70b2fe;
+    border-radius: 100px;
+    background: #e2efff;
+    transition: width .5s;
+    -moz-transition: width .5s;
+    -webkit-transition: width .5s;
+    -o-transition: width .5s;
+    transition-delay: .1s;
+    -moz-transition-delay: .1s;
+    -webkit-transition-delay: .1s;
+    -o-transition-delay: .1s;
+    margin: 0px auto;
+}
+#acc-input-box input{
+    outline: none;
+    margin-left: 75px;
+    width: 525px;
+    height: 150px;
+    font-size: 60px;
+    border: 1px solid #e2efff;
+    background: #e2efff;
+    box-shadow:inset 0 1px 1px  #e2efff;
+    -webkit-box-shadow: inset 0 1px 1px  #e2efff;
+    -moz-box-shadow: inset 0 1px 1px  #e2efff;
+}
+#acc-input-box input:focus{
+    box-shadow:inset 0 1px 1px  #e2efff;
+    -webkit-box-shadow: inset 0 1px 1px  #e2efff;
+    -moz-box-shadow: inset 0 1px 1px  #e2efff;
+}
+.php-big-circle{
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+}
+#acc-input-box .php-big-circle{
+    font-size: 60px;
+    font-weight: bolder;
+    color: #ffffff;
+    text-align: center;
+    background-color: #70b2fe;
+    border: 0px;
+    white-space: nowrap;
+    vertical-align: middle;
+    display: table-cell;
 }
