成功页面制作

--- a/app/css/pay.css
+++ b/app/css/pay.css
@@ -14,6 +14,7 @@ body section:first-child {
 .top-control {
     margin-top: 30px;
 }
+
 .top-control-10 {
     margin-top: 10px;
 }
@@ -203,8 +204,14 @@ body section:first-child {
     font-size: 90px;
 }
 
-.text-color-g {
+.text-color-g, .text-color-g-b {
     color: #888a8b;
+}
+
+.text-color-g-b {
+    text-decoration-line: underline;
+    text-decoration-color: #888a8b;
+    text-decoration-style: solid;
 }
 
 .bottom-bord-weight {
@@ -235,7 +242,7 @@ body section:first-child {
     -moz-box-shadow: 0 0 30px rgba(109, 177, 254, 1);
 }
 
-.big-button-blue:hover {
+.big-button-blue:hover, .empty-btn-s:hover {
     background: #71b2ff;
     text-decoration: none;
 }
@@ -252,8 +259,8 @@ body section:first-child {
     color: #7BB5EC;
 }
 
-.blue-pic-icon{
-    color:#71b2ff;
+.blue-pic-icon {
+    color: #71b2ff;
 }
 
 #acc-input-box input:-ms-input-placeholder {
@@ -288,6 +295,19 @@ body section:first-child {
     -moz-background-size: 46px 50px;
 }
 
+.recommend-list {
+    margin: 30px 30px 0px -15px;
+    display: inline-block;
+    position: relative;
+}
+
+.recommend-list div:first-child {
+    width: 200px;
+    height: 150px;
+    background-color: #0e0e0e;
+    border-radius: 50px;
+}
+
 .content-left {
     margin-left: 50px;
 }
@@ -311,9 +331,16 @@ body section:first-child {
     text-align: center;
 }
 
-.hr-height {
+.hr-height, .hr-height-tip {
     height: 60px;
     background-color: #f3f3f3;
+}
+
+.hr-height-tip {
+    padding-left: 30px;
+    font-weight: bold;
+    line-height: 65px;
+    font-size: 25px;
 }
 
 #star-dg {
@@ -343,7 +370,8 @@ body section:first-child {
 .discuss-box input[type=checkbox] {
     visibility: hidden;
 }
-.discuss-box-select-n,.discuss-box-select{
+
+.discuss-box-select-n, .discuss-box-select, .empty-btn-s {
     border: solid #71b2ff 5px;
     color: #000;
     height: 70px;
@@ -351,53 +379,137 @@ body section:first-child {
     padding-left: 40px;
     padding-right: 40px;
 }
-.discuss-box li{
+
+.empty-btn-s {
+    border-width: 2px;
+    font-size: 35px;
+    padding: 5px 40px 5px 40px;
+    margin: 0px 10px 0px 10px;
+}
+
+.discuss-box li {
     padding: 10px 15px 10px 15px;
 }
-.discuss-box li div label{
+
+.discuss-box li div label {
     font-size: 40px;
 }
-.big-font-35{
+
+.big-font-35 {
     font-size: 35px;
 }
-.discuss-box-select{
+
+.discuss-box-select {
     color: #fff;
     border-color: #bedbfd;
     background: #bedbfd;
 }
-#description{
-    height:200px;
+
+#description {
+    height: 200px;
     width: 100%;
     font-size: 40px;
     padding-top: 20px;
     line-height: 50px;
     resize: none;
 }
-.box{width:100%;display: flex;}
-.left_box,.right_box{width: 50px;}
-.center_box{ flex:1; }
-.center_box .left_box{
+
+.box {
+    width: 100%;
+    display: flex;
+}
+
+.left_box, .right_box {
+    width: 50px;
+}
+
+.center_box, .center_box-2 {
+    flex: 1;
+}
+
+.center_box .left_box {
     width: 400px;
 }
-.center_box .right_box{
+
+.center_box .right_box {
     width: 400px;
 }
-.pic-small{
+
+.pic-small {
     border: dashed #979797 2px;
     height: 100px;
     width: 100px;
     padding-left: 10px;
 }
+
 .fileinput-button {
     position: relative;
     display: inline-block;
     overflow: hidden;
 }
 
-.fileinput-button input{
+.fileinput-button input {
     position: absolute;
     left: 0px;
     top: 0px;
     opacity: 0;
     -ms-filter: 'alpha(opacity=0)';
+}
+
+.text-color-y {
+    color: #f5ca23;
+}
+
+.box-2 {
+    width: 100%;
+    display: flex;
+    height: 300px;
+}
+
+.left_box-2, .right_box-2 {
+    width: 2px;
+}
+
+.center_box-2 {
+    height: 300px;
+    overflow: hidden;
+}
+
+.list-content {
+    vertical-align: top;
+    height: 300px;
+}
+
+.recommend-box {
+    width: 330px;
+    height: 300px;
+    margin-left: 5px;
+    padding: 20px 20px 20px 20px;
+}
+
+.recommend-box-img {
+    width: 100%;
+    height: 200px;
+    border-radius: 20px;
+}
+
+.recommend-box-content {
+    position: relative;
+}
+
+.recommend-box-title {
+    position: absolute;
+    font-size: 20px;
+    color: #ffffff;
+    padding: 2px 10px 2px 10px;
+    background-color: #71b2ff;
+    border-radius: 15px;
+    margin-top: 10px;
+    margin-left: 10px;
+}
+
+.recommend-box title-box {
+    font-size: 30px;
+    color: #585858;
+    line-height: 45px;
 }
