--- a/app/css/pay.css
+++ b/app/css/pay.css
@@ -112,6 +112,7 @@ body {
     box-shadow: inset 0 1px 1px #e2efff;
     -webkit-box-shadow: inset 0 1px 1px #e2efff;
     -moz-box-shadow: inset 0 1px 1px #e2efff;
+    line-height: normal;
 }
 
 #acc-input-box input:focus {
@@ -181,16 +182,22 @@ body {
     font-weight: bold;
 }
 
-.money-icon {
-    color: #F5CA23;
-    font-weight: bolder;
-}
-
 .bottom-bord-black {
     color: #0e0e0e;
     text-decoration-line: underline;
+    -webkit-text-decoration-line:underline;
+    -moz-text-decoration-line:underline;
     text-decoration-color: #72b1f7;
+    -webkit-text-decoration-color: #72b1f7;
+    -moz-text-decoration-color:#72b1f7;
     text-decoration-style: solid;
+    -webkit-text-decoration-style: solid;
+    -moz-text-decoration-style: solid;
+}
+
+.money-icon {
+    color: #F5CA23;
+    font-weight: bolder;
 }
 
 .big-font-50 {
@@ -535,7 +542,7 @@ body {
 
 .recommend-box-title, .recommend-box-title-y {
     position: absolute;
-    font-size: 20px;
+    font-size: 25px;
     color: #ffffff;
     padding: 2px 10px 2px 10px;
     background-color: #71b2ff;
@@ -602,7 +609,7 @@ body {
 }
 
 .discuss-box-border {
-    border-bottom: solid #888a8b 2px;
+    border-bottom: solid #dadada 2px;
     margin-bottom: 10px;
 }
 
@@ -643,7 +650,7 @@ body {
 
 .mask .dilog-center {
     left: 50%;
-    top: 15%;
+    top: 3%;
     width: 682px;
     margin-left: -350px;
 }
