--- a/app/css/pay.css
+++ b/app/css/pay.css
@@ -507,11 +507,14 @@ body {
     width: 400px;
 }
 
+.pic-view,.pic-small{
+    width: 120px;
+}
 .pic-small {
+    height: 120px;
     border: dashed #979797 2px;
-    height: 100px;
-    width: 100px;
-    padding-left: 10px;
+    margin-left: 15px;
+    overflow: hidden;
 }
 
 .fileinput-button {
@@ -526,6 +529,8 @@ body {
     top: 0px;
     opacity: 0;
     -ms-filter: 'alpha(opacity=0)';
+	height: 100px;
+    width: 100px;
 }
 
 .text-color-y, .recommend-box-title-y {
@@ -574,7 +579,7 @@ body {
     position: relative;
 }
 
-.recommend-box-title, .recommend-box-title-y {
+.recommend-box-title, .recommend-box-title-y,.close-pic-small {
     position: absolute;
     font-size: 25px;
     color: #ffffff;
@@ -606,7 +611,19 @@ body {
     color: #ffffff;
     background-color: #ffd04d;
 }
+.close-pic-small{
+    padding: 5px ;
+    margin: 0px;
+    color: #ffffff;
+    font-size: 20px;
+    height:25px;
+    width: 25px;
+    border-radius: 30px;
+    text-align: center;
+    line-height: 10px;
+    background-color:rgba(0,0,0,0.4);
 
+}
 .recommend-box title-box {
     font-size: 30px;
     color: #585858;
@@ -758,4 +775,7 @@ body {
     top: 0px;
     left: 0px;
     z-index: 66;
+}
+.file-hide{
+    display:none;
 }
